--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,10 +4,10 @@ FROM python:3.10
 
 WORKDIR ./
 
-COPY ./app .
+COPY . .
 
 RUN pip install -r requirements.txt
 
 EXPOSE $DJANGO_PORT
 
-CMD ["python", "manage.py", "runserver", "0.0.0.0:${DJANGO_PORT}"]
+CMD ["python", "./app/manage.py", "runserver", "0.0.0.0:${DJANGO_PORT}"]
